refactor: replace static navigation menu with shared dynamic implementation

--- a/families.html
+++ b/families.html
@@ -15,19 +15,11 @@
 
 <body id="container_all">
 
-    <!-- Navigation Menu -->
-    <nav class="menu">
-        <div class="menu-container">
-            <button class="menu-button">Menu</button>
-            <div class="menu-links">
-                <a href="index.html">Court</a>
-                <a href="scrolls.html">Army</a>
-                <a href="map.html">Overview Map</a>
-                <a href="https://www.dndbeyond.com/campaigns/5380810">D&D Beyond Campaign</a>
-                <a href="https://federicoferoggio.github.io/planetnavigator/">Planets Explorer</a>
-            </div>
-        </div>
-    </nav>
+    <!-- Start Navigation Menu -->
+    <nav class="menu"></nav>
+    <script src="nav.js"></script>
+    <link rel="stylesheet" href="nav.css">
+    <!-- End Navigation Menu-->
 
     <!-- Page Title -->
     <h1 style="text-align: center; color: white;">I Grandi dello Spazio</h1>
