--- a/index.html
+++ b/index.html
@@ -15,19 +15,12 @@
 </head>
 
 <body id="container_all">
-
-    <nav class="menu">
-        <div class="menu-container">
-            <button class="menu-button">Menu</button>
-            <div class="menu-links">
-                <a href="scrolls.html">Army</a>
-                <a href="families.html">Families</a>
-                <a href="map.html">Overview Map</a>
-                <a href="https://www.dndbeyond.com/campaigns/5380810">D&D Beyond Campaign</a>
-                <a href="https://federicoferoggio.github.io/planetnavigator/">Planets Explorer</a>
-            </div>
-        </div>
-    </nav>
+    
+    <!-- Start Navigation Menu -->
+    <nav class="menu"></nav>
+    <script src="nav.js"></script>
+    <link rel="stylesheet" href="nav.css">
+    <!-- End Navigation Menu-->
 
     <div id="laManoBox">
         <h1>La Mano</h1>
