--- a/scrolls.html
+++ b/scrolls.html
@@ -18,18 +18,11 @@
 </head>
 
 <body id="container_all">
-    <nav class="menu">
-        <div class="menu-container">
-            <button class="menu-button">Menu</button>
-            <div class="menu-links">
-                <a href="index.html">Court</a>
-                <a href="families.html">Families</a>
-                <a href="map.html">Overview Map</a>
-                <a href="https://www.dndbeyond.com/campaigns/5380810">D&D Beyond Campaign</a>
-                <a href="https://federicoferoggio.github.io/planetnavigator/">Planets Explorer</a>
-            </div>
-        </div>
-    </nav>
+    <!-- Start Navigation Menu -->
+    <nav class="menu"></nav>
+    <script src="nav.js"></script>
+    <link rel="stylesheet" href="nav.css">
+    <!-- End Navigation Menu-->
 
     <div class="side-buttons" style="position:fixed; left:16px; top:16px; display:flex; flex-direction:column; gap:8px; z-index:1000;">
         <button class="side-menu-button">Open Army Builder</button>
