--- a/map.html
+++ b/map.html
@@ -12,18 +12,13 @@
 </head>
 
 <body>
-  <nav class="menu">
-    <div class="menu-container">
-        <button class="menu-button">Menu</button>
-        <div class="menu-links">
-            <a href="index.html">Court</a>
-            <a href="scrolls.html">Army</a>
-            <a href="families.html">Families</a>
-            <a href="https://www.dndbeyond.com/campaigns/5380810">D&D Beyond Campaign</a>
-            <a href="https://federicoferoggio.github.io/planetnavigator/">Planets Explorer</a>
-        </div>
-    </div>
-</nav>
+
+  <!-- Start Navigation Menu -->
+  <nav class="menu"></nav>
+  <script src="nav.js"></script>
+  <link rel="stylesheet" href="nav.css">
+  <!-- End Navigation Menu-->
+  
   <div id="monthControls">
       <label for="monthInput">Current Month:</label>
       <input type="number" id="monthInput" value="10224" min="0" oninput="updateSystem()" size="auto">
