refactor: update navigation menu class names for consistency

--- a/map.html
+++ b/map.html
@@ -14,7 +14,7 @@
 <body>
 
   <!-- Start Navigation Menu -->
-  <nav class="menu"></nav>
+  <nav class="navigation-menu"></nav>
   <script src="nav.js"></script>
   <link rel="stylesheet" href="nav.css">
   <!-- End Navigation Menu-->
