--- a/scrolls.html
+++ b/scrolls.html
@@ -19,7 +19,7 @@
 
 <body id="container_all">
     <!-- Start Navigation Menu -->
-    <nav class="menu"></nav>
+    <nav class="navigation-menu"></nav>
     <script src="nav.js"></script>
     <link rel="stylesheet" href="nav.css">
     <!-- End Navigation Menu-->
