improve mobile experience

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <!-- Dynamic description will appear here -->
             </div>
 
-            <div class="stat-input" style="margin: 5px;">
+            <div>
                 <label for="companyBonus">Current Assets:</label>
                 <select id="companyBonus">
                     <option value="" disabled selected>Select an asset</option>
@@ -123,9 +123,6 @@
         </div>
     </div>
 
-    </div>
-
-    </div>
     <script src="script.js"></script>
 </body>
 
