--- a/scrolls.html
+++ b/scrolls.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="light only">
     <title>Warscroll & Card Viewer</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -82,13 +83,12 @@
         <h1 class="header-title">Warscroll Library</h1>
 
         <div class="warscroll-section">
-            <div id="warscroll-container" class="warscroll-container">
-                <p id="warscroll-loader" class="loader-text">Loading Warscrolls...</p>
-            </div>
-
             <button id="prev-btn" class="nav-btn hidden">
                 <i class="fas fa-chevron-left"></i>
             </button>
+            <div id="warscroll-container" class="warscroll-container">
+                <p id="warscroll-loader" class="loader-text">Loading Warscrolls...</p>
+            </div>
             <button id="next-btn" class="nav-btn hidden">
                 <i class="fas fa-chevron-right"></i>
             </button>
